--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "To-do application",
   "homepage": "https://github.com/frontend-school/Do-While",
-  "private" : true,
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/frontend-school/Do-While"
@@ -17,5 +17,11 @@
   },
   "bugs": {
     "url": "https://github.com/frontend-school/Do-While/issues"
+  },
+  "devDependencies": {
+    "del": "^1.1.1",
+    "gulp": "^3.8.11",
+    "gulp-connect": "^2.2.0",
+    "gulp-sass": "^1.3.3"
   }
 }
