--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-connect": "^2.2.0",
+    "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3"
   }
 }
