--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-connect": "^2.2.0",
     "gulp-file-include": "^0.8.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.3.3"
+    "gulp-sass": "^1.3.3",
+    "gulp.spritesmith": "^3.5.3"
   }
 }
