--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,8 @@
   ],
   "devDependencies": {
     "jquery": "~2.1.3",
-    "normalize.css": "~3.0.3"
+    "normalize.css": "~3.0.3",
+    "html5shiv": "~3.7.2",
+    "respond": "~1.4.2"
   }
 }
