--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "gulp": "^3.8.11",
     "gulp-connect": "^2.2.0",
     "gulp-file-include": "^0.8.0",
+    "gulp-livereload": "^3.8.0",
+    "gulp-nodemon": "^2.0.2",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
-    "gulp.spritesmith": "^3.5.3"
+    "gulp.spritesmith": "^3.5.3",
+    "require-dir": "^0.3.0"
   }
 }
