--- a/package.json
+++ b/package.json
@@ -18,10 +18,17 @@
   "bugs": {
     "url": "https://github.com/frontend-school/Do-While/issues"
   },
+  "dependencies": {
+    "body-parser": "~1.12.0",
+    "cookie-parser": "~1.3.4",
+    "debug": "~2.1.1",
+    "express": "~4.12.0",
+    "morgan": "~1.5.1",
+    "serve-favicon": "~2.2.0"
+  },
   "devDependencies": {
     "del": "^1.1.1",
     "gulp": "^3.8.11",
-    "gulp-connect": "^2.2.0",
     "gulp-file-include": "^0.8.0",
     "gulp-livereload": "^3.8.0",
     "gulp-nodemon": "^2.0.2",
@@ -29,5 +36,10 @@
     "gulp-sass": "^1.3.3",
     "gulp.spritesmith": "^3.5.3",
     "require-dir": "^0.3.0"
+  },
+  "scripts" : {
+    "preinstall" : "bower install",
+    "postinstall" : "gulp",
+    "start": "npm i && gulp server"
   }
 }
