--- a/bower.json
+++ b/bower.json
@@ -22,8 +22,7 @@
     "test",
     "tests"
   ],
-  "devDependencies": {
-    "jquery": "~2.1.3",
+  "dependencies": {
     "normalize.css": "~3.0.3",
     "html5shiv": "~3.7.2",
     "respond": "~1.4.2"
