--- a/package.json
+++ b/package.json
@@ -24,22 +24,28 @@
     "debug": "~2.1.1",
     "express": "~4.12.0",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
+    "serve-favicon": "~2.2.0",
+    "require-dir": "^0.3.0"
   },
   "devDependencies": {
+    "browserify": "^9.0.8",
+    "browserify-ngannotate": "^0.7.1",
+    "browserify-shim": "^3.8.5",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
+    "gulp-bower-normalize": "^1.0.5",
+    "gulp-browserify": "^0.5.1",
     "gulp-file-include": "^0.8.0",
     "gulp-livereload": "^3.8.0",
     "gulp-nodemon": "^2.0.2",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
     "gulp.spritesmith": "^3.5.3",
-    "require-dir": "^0.3.0"
+    "main-bower-files": "^2.6.2"
   },
-  "scripts" : {
-    "preinstall" : "bower install",
-    "postinstall" : "gulp",
-    "start": "npm i && gulp server"
+  "scripts": {
+    "preinstall": "bower install",
+    "postinstall": "gulp",
+    "start": "gulp server"
   }
 }
