--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "body-parser": "~1.12.0",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
+    "errorhandler": "^1.3.5",
     "express": "~4.12.0",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0",
-    "require-dir": "^0.3.0"
+    "require-dir": "^0.3.0",
+    "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
     "browserify": "^9.0.8",
