--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "gulp-bower-normalize": "^1.0.5",
     "gulp-browserify": "^0.5.1",
     "gulp-file-include": "^0.8.0",
+    "gulp-jshint": "^1.10.0",
     "gulp-livereload": "^3.8.0",
     "gulp-nodemon": "^2.0.2",
     "gulp-rename": "^1.2.0",
     "gulp-sass": "^1.3.3",
     "gulp.spritesmith": "^3.5.3",
+    "jshint-stylish": "^1.0.1",
     "main-bower-files": "^2.6.2"
   },
   "scripts": {
