--- a/package.json
+++ b/package.json
@@ -62,15 +62,15 @@
   },
   "browser": {
     "angular": "./bower_components/angular/angular.js",
-    "angular-route": "./bower_components/angular-route/angular-route.js"
+    "ui-router": "./bower_components/ui-router/release/angular-ui-router.js"
   },
   "browserify-shim": {
     "angular": {
       "exports": "angular"
     },
-    "angular-route": {
+    "ui-router": {
       "depends": "angular",
-      "exports": "angular.module('ngRoute').name"
+      "exports": "angular.module('ui.router').name"
     }
   }
 }
